[tool.poetry]
name = "apistar-peewee-orm"
version = "0.3.1"
description = "Peewee integration for API Star."
authors = ["José Antonio Perdiguero López <perdy@perdy.io>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/PeRDy/apistar-peewee-orm"
keywords = ["apistar", "peewee", "orm"]

[package]
include = ["apistar_peewee_orm/**/*.py"]

[tool.poetry.dependencies]
python = "^3.6"
apistar = "^0.5.30"
peewee = "^3.5"
clinner = "^1.10"
peewee-migrate = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
pytest-xdist = "^1.22"
pytest-cov = "^2.5"
tox = "^3.0"
clinner = "^1.9"
ipython = "^6.4"
flake8 = "^3.5"
isort = "^4.3"
black = "^18.3-alpha.0"

[tool.poetry.scripts]
apistar-peewee-orm = "apistar_peewee_orm.__main__:main"

[tool.poetry.extras]
apsw = ["apsw"]
mysql = ["mysqlclient"]
postgresql = ["psycopg2-binary"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | build
  | dist
)/
'''
